# LiOAvIZ-Lab7

./: CMakeLists.txt  README.md  Report_7.docx
cmake/: compiler_options.cmake
include/adapters/: console_adapter.h
include/backend/: graph_gen.h
resources/config_files/: aliases.conf
src/: CMakeLists.txt
src/adapters/: console_adapter.cpp
src/backend/: graph_gen.cpp
